--- a/index.html
+++ b/index.html
@@ -1,47 +1,43 @@
 <!DOCTYPE html>
-<html lang="pl">
-	<head>
-		<title>Tytuł</title>
+<html>
+    <head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+		<title>Rock, paper, scissors</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-	<h1>Rock, paper, scissors</h1>
-	<button class="btn btn-success" onClick="newGame()">New game</button>
-	<button class="btn btn-default pick-button" onclick="playerPick('rock')">
-    	Rock 
-    	<i class="fa fa-hand-rock-o" aria-hidden="true"></i>
-    </button>
-	<button class="btn btn-default pick-button" onclick="playerPick('paper')">
-		Paper 
-		<i class="fa fa-hand-paper-o" aria-hidden="true"></i>
-	</button>
-	<button class="btn btn-default pick-button" onclick="playerPick('scissors')">
-		Scissors
-		<i class="fa fa-hand-scissors-o" aria-hidden="true"></i>
-	</button>
-	<h3>Current round</h3> <br>
-	Computer picked <span id="computerPick"></span> <br>
-	Player picked <span id="playerPick"></span> <br>
-	Result: <span id="gameResult"></span>
-	<table class="table table-bordered table-striped">
-	  <thead>
-	    <tr>
-	      <th colspan="2" class="text-center">Game results</th>
-	    </tr>
-	    <tr>
-	      <th id="playerName">Player</th>
-	      <th>Computer</th>
-	    </tr>
-	  </thead>
-	  <tbody><tr>
-	    <td id="playerScore">0</td>
-	    <td id="computerScore">0</td>
-	  </tr></tbody>
-	</table>
-	<p id="roundResult"></p>
-    <script src="script.js"></script>
+		<h1>Rock, paper, scissors</h1>
+		<button class="btn btn-success" onclick="newGame()">New game</button>
+		<button class="btn btn-default pick-button" onclick="playerPick('rock')"> Rock <i class="fa fa-hand-rock-o" aria-hidden="true"></i></button>
+		<button class="btn btn-default pick-button" onclick="playerPick('paper')"> Paper <i class="fa fa-hand-paper-o" aria-hidden="true"></i></button>
+		<button class="btn btn-default pick-button" onclick="playerPick('scissors')"> Scissors <i class="fa fa-hand-scissors-o" aria-hidden="true"></i></button>
+		<h3>Current round</h3>
+		<br>
+		Computer picked <span id="computerPick"></span>
+		<br>
+		Player picked <span id="playerPick"></span>
+		<br> 
+		Result: <span id="gameResult"></span>
+		<table class="table table-bordered table-striped">
+			<thead>
+				<tr>
+					<th colspan="2" class="text-center">Game results</th>
+				</tr>
+				<tr>
+					<th id="playerName">Player</th>
+					<th>Computer</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td id="playerScore">0</td>
+					<td id="computerScore">0</td>
+				</tr>
+			</tbody>
+		</table>
+		<p id="roundResult"></p>
+		<script src="script.js"></script>
 	</body>
 </html>
